Fix gap mobile navbar

--- a/Latihan CSS GRID/Shared/NavMenu.razor.css
+++ b/Latihan CSS GRID/Shared/NavMenu.razor.css
@@ -104,7 +104,7 @@
     .nav-container ul{
         display: none;
         position: absolute;
-        top: 12vh;
+        top: 10vh;
         width: 100vw;
         justify-content: center;
     }
